# rustic-pixel-display

./: .gitattributes  .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  rustic-pixel-display.code-workspace
.github/workflows/: ci.yml  examples-ci.yml  lib-ci.yml
doc/: Diagrams.drawio  LedStatusBoard.drawio
examples/tracker_renders/: Cargo.toml
examples/tracker_renders/src/: home_assistant_tracker.rs  lib.rs  septa_tracker.rs
examples/train_renders/: Cargo.toml
examples/train_renders/src/: lib.rs
examples/weather_renders/: Cargo.toml
examples/weather_renders/src/: lib.rs
rustic-pixel-display/: Cargo.toml  Rocket.toml  rustic-pixel-display.code-workspace
rustic-pixel-display/macros/: Cargo.toml
rustic-pixel-display/macros/src/: lib.rs
rustic-pixel-display/src/: config.rs  factory_list.rs  factory_registry.rs  layout_manager.rs  lib.rs  registry.rs
rustic-pixel-display/src/driver/: cpp_driver.rs  mod.rs  rust_driver.rs
rustic-pixel-display/src/http_server/: forms.rs  mod.rs
rustic-pixel-display/src/render/: cached_canvas.rs  mod.rs
rustic-pixel-display/src/rpi/: mod.rs
rustic-pixel-display/templates/: debug_text.html.tera  macros.html.tera  transit_config.html.tera
rustic_pixel_display/macros/src/: lib.rs
rustic_pixel_display/sdk/: Cargo.toml
rustic_pixel_display/sdk/src/render/: mod.rs
rustic_pixel_display/src/: registry.rs
rustic_pixel_display/src/driver/: cpp_driver.rs  mod.rs
rustic_pixel_display/src/http_server/: forms.rs
src/: config.rs  http_server.rs  led_driver.rs  lib.rs  main.rs  render.rs  simulator_driver.rs  transit.rs
src/http_server/: forms.rs
src/render/: mod.rs  sub_canvas.rs
src/renders/: mod.rs  transit_tracker.rs  upcoming_arrivals.rs  weather.rs
src/renders/person_tracker/: home_assistant_tracker.rs  mod.rs  septa_tracker.rs
src/renders/upcoming_arrivals/: amtrak_provider.rs  mod.rs  septa_provider.rs
src/simulator/: mod.rs
templates/: config.html.tera  debug_text.html.tera  index.html.tera  macros.html.tera
