[package]
name = "rustic-pixel-display"
version = "0.1.0"
edition = "2021"
description = "Driver for RGB LED matrices that displays things like real time location, transit, stocks, etc."
keywords = ["rgb", "matrix", "pixel", "display"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/rustic-pixel-display"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
http_server = ["dep:rocket", "dep:rocket_dyn_templates"]
simulator = ["dep:embedded-graphics-simulator"]

[dependencies]
rpi-led-panel = { git = "https://github.com/EmbersArc/rpi_led_panel.git", features = ["drawing", "embedded-graphics"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
embedded-layout = "0.3.1"
rocket = { version = "=0.5.0-rc.3", features = ["json"], optional = true }
rocket_dyn_templates = {version = "=0.1.0-rc.3", features = ["tera"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
anyhow = "1.0.71"
septa-api = { git = "https://github.com/StefanBossbaly/septa-api", branch = "master" }
home-assistant-rest = "0.2.0"
geoutils = "0.5.1"
lazy_static = "1.4.0"
log = "0.4.19"
parking_lot = "0.12.1"
tinybmp = "0.5.0"
env_logger = "0.10.0"