[package]
name = "rustic_pixel_examples"
version = "0.1.0"
edition = "2021"
description = "Example render implementations for Rustic Pixel Display crate"
keywords = ["rgb", "matrix", "pixel", "display"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/rustic-pixel-display"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "GPL"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
embedded-graphics = "0.8.0"
embedded-layout-macros = { git = "https://github.com/bugadani/embedded-layout.git", branch = "master" }
embedded-layout = { git = "https://github.com/bugadani/embedded-layout.git", branch = "master" }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
anyhow = "1.0.71"
lazy_static = "1.4.0"
log = "0.4.19"
parking_lot = "0.12.1"
tinybmp = "0.5.0"
env_logger = "0.10.0"
embedded-graphics-simulator = "0.5.0"
rpi-led-panel = { git = "https://github.com/EmbersArc/rpi_led_panel.git", features = ["drawing", "embedded-graphics"] }
weer_api = "0.1.1"
rustic_pixel_display = { path = "rustic-pixel-display" }
rustic_pixel_display_macros = { path = "rustic-pixel-display/macros" }
home-assistant-rest = "0.2.0"
septa-api = { git = "https://github.com/StefanBossbaly/septa-api.git", branch = "master" }
geoutils = "0.5.1"

[lib]
name = "rustic_pixel_examples"
path = "src/lib.rs"

[[bin]]
name = "simulator"

[[bin]]
name = "rpi"
