[package]
name = "rustic_pixel_examples"
version = "0.1.0"
edition = "2021"
description = "Example render implementations for Rustic Pixel Display crate"
keywords = ["rgb", "matrix", "pixel", "display"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/rustic-pixel-display"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "GPL"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
embedded-graphics = "0.8.1"
embedded-layout-macros = "0.3.1"
embedded-layout = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "0.4.20"
parking_lot = "0.12.1"
tinybmp = "0.5.0"
env_logger = "0.10.1"
embedded-graphics-simulator = "0.6.0"
weer_api = "0.1.1"
rustic_pixel_display = { path = "rustic-pixel-display", features = ["http_server"] }
rustic_pixel_display_macros = { path = "rustic-pixel-display/macros" }
home-assistant-rest = "0.2.0"
septa-api = "0.3.4"
amtrak-api = { git = "https://github.com/StefanBossbaly/amtrak-api.git", branch = "master" }
geoutils = "0.5.1"
clap = { version= "4.4", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"

[lib]
name = "rustic_pixel_examples"
path = "src/lib.rs"

[[bin]]
name = "simulator"

[[bin]]
name = "simulator_http"

[[bin]]
name = "rpi"

[[bin]]
name = "rpi_http"
