[package]
name = "rustic_pixel_display"
version = "0.1.0"
edition = "2021"
description = "Driver for RGB LED matrices that displays things like real time location, transit, stocks, etc."
keywords = ["rgb", "matrix", "pixel", "display"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/rustic-pixel-display"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
http_server = ["dep:rocket", "dep:rocket_dyn_templates"]

[dependencies]
embedded-graphics = "0.8.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"], optional = true }
rocket_dyn_templates = {version = "=0.1.0-rc.3", features = ["tera"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
anyhow = "1.0.71"
log = "0.4.19"
rpi-led-panel = { git = "https://github.com/EmbersArc/rpi_led_panel.git", features = ["drawing", "embedded-graphics"] }
parking_lot = "0.12.1"

[lib]
name = "rustic_pixel_display"
path = "src/lib.rs"

