[package]
name = "rustic_pixel_display"
version = "0.1.0"
edition = "2021"
description = "Driver for RGB LED matrices that displays things like real time location, transit, stocks, etc."
keywords = ["rgb", "matrix", "pixel", "display"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/rustic-pixel-display"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
http_server = ["dep:rouille"]

[workspace]
members = [
  "macros",
]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
anyhow = "1.0.75"
log = "0.4.20"
parking_lot = "0.12.1"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4.28"
rustic_pixel_display_macros = { path = "macros" }

# Feature http_server dependencies
rouille = { version = "3.6.2", optional = true }

# Graphics Libraries
embedded-graphics = "0.8.1"

# Tokio
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8" }

# Rust Driver
rpi-led-panel = { version = "0.4.0", features = ["drawing", "embedded-graphics"] }

# Cpp Driver Bindings (For x86_64 stub implementation, for aarch64 use the real deal)
[target.'cfg(target_arch = "x86_64")'.dependencies]
rpi-led-matrix = { git = "https://github.com/StefanBossbaly/rust-rpi-rgb-led-matrix.git", branch = "changes-merged", features = ["embeddedgraphics", "c-stubs"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
rpi-led-matrix = { git = "https://github.com/StefanBossbaly/rust-rpi-rgb-led-matrix.git", branch = "changes-merged", features = ["embeddedgraphics"] }

[lib]
name = "rustic_pixel_display"
path = "src/lib.rs"

