[package]
name = "tracker_renders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rustic_pixel_display_sdk = { path = "../../rustic_pixel_display/sdk" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8" }
log = "0.4.20"
lazy_static = "1.4.0"
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-layout-macros = "0.3.1"
home-assistant-rest = "0.2.0"
anyhow = "1.0.75"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tinybmp = "0.5.0"
septa-api = "0.3.4"
geoutils = "0.5.1"
