[package]
name = "weather_renders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rustic_pixel_display_sdk = { path = "../../rustic_pixel_display/sdk" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8" }
weer_api = "0.1.1"
log = "0.4.20"
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
anyhow = "1.0.75"
